<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_available_requests"
        android:icon="@drawable/ic_target"
        android:title="@string/available_requests" />

    <item
        android:id="@+id/nav_my_requests"
        android:icon="@drawable/ic_clipboard"
        android:title="@string/my_requests" />

    <item
        android:id="@+id/nav_master_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/master_profile" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_outline"
        android:title="@string/settings" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />

</menu>
